infrastructure/securiy_groups.tf
# create security group for ALB
resource "aws_security_group" "alb" {
    name = "${var.project_name}-alb-sg"
    description = "ALB security group"
    vpc_id = aws_vpc.main.id
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "${var.project_name}-alb-sg"
    }
}
# create security group for ECS
resource "aws_security_group" "ecs" {
    name = "${var.project_name}-ecs-sg"
    description = "ECS security group"
    vpc_id = aws_vpc.main.id
    ingress {
        from_port = 3000
        to_port = 3000
        protocol = "tcp"
        security_groups = [aws_security_group.alb.id]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "${var.project_name}-ecs-sg"
    }   
}
# create security group for RDS
resource "aws_security_group" "rds" {
    name = "${var.project_name}-rds-sg"
    description = "RDS security group"
    vpc_id = aws_vpc.main.id
    ingress {
        from_port = 5432
        to_port = 5432
        protocol = "tcp"
        security_groups = [aws_security_group.ecs.id]
    }
}
